--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,145 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+    color: white;
+}
 body {
-    color: red;
+    background-color: #101010;
+}
+nav {
+    background-color: #101010;
+    display: flex;
+    gap: 35px;
+    align-items: center;
+    justify-content: space-between;
+    padding-inline: 90px;
+    height: 6.5rem;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+nav > a > img {
+    width: 70px;
+    height: 70px;
+}
+ul {
+    display: flex;
+    gap: 35px;
+}
+li {
+    list-style-type: none;
+}
+li>a {
+    text-decoration: none;
+    font-weight: bold;
+    color: white;
+    font-size: 1rem;
+
+    border-bottom: 2px solid transparent;
+
+    transition: 0.3s;
+}
+li>a:hover {
+    border-bottom: 2px solid #59B6E7;
+}
+main {
+    margin-top: 10rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.Profile {
+    display: flex;
+    gap: 1rem;
+    margin-bottom: 4.5rem;
+}
+.Profile>.ProfileInfo{
+    opacity: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    position: relative;
+    animation-name: textMove;
+    animation-duration: 2s;
+    animation-delay: 1s;
+    animation-fill-mode: both;
+}
+.Profile>img {
+    height: 12rem;
+    width: 12rem;
+    border-radius: 50%;
+    position: relative;
+    animation-name: imgMove;
+    animation-duration: 1s;
+    animation-delay: 1s;
+    animation-fill-mode: both;
+    
+}
+.ProfileInfo>h2 {
+    font-size: 24px;
+    font-weight: bold;
+}
+.ProfileInfo>h3 {
+    font-size: 16px;
+    margin-top: 0.25rem;
+    font-weight: 100;
+}
+.ProfileInfo>h4 {
+    font-size: 16px;
+    font-weight: 100;
+    margin-top: 1rem;
+}
+h1 {
+    font-size: 32px;
+}
+.buttons {
+    margin-top: 2.5rem;
+}
+.buttons>button {
+    background-image: linear-gradient(to right, #106997 0%, #106692 10%, #0D4765 100%);
+    font-size: 20px;
+    padding: 1rem 2rem;
+    border-radius: 16px;
+
+}
+#arrow{
+    position: absolute;
+    margin: auto;
+    bottom: 2rem;
+    animation-name: pulseArrow;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+@keyframes imgMove{
+    0%{
+        transform : translateX(128px)
+    }
+    100%{
+        transform : translateX(-5px)
+    }
+}
+@keyframes textMove{
+    0%{
+        transform : translateX(0px);
+        opacity: 0;
+    }
+    18%{
+        opacity: 0;
+    }
+    100%{
+        transform : translateX(+10px);
+        opacity: 1;
+    }
+}
+@keyframes pulseArrow{
+    from{
+        opacity: 0.3;
+    }
+    to{
+        opacity: 1;
+    }
 }
