--- a/styles.css
+++ b/styles.css
@@ -4,18 +4,25 @@
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
     color: white;
+    scroll-behavior: smooth;
 }
 body {
     background-color: #101010;
+    overflow: hidden;
+}
+section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 nav {
-    background-color: #101010;
+    background-color: transparent;
     display: flex;
     gap: 35px;
     align-items: center;
     justify-content: space-between;
     padding-inline: 90px;
-    height: 6.5rem;
+    height: 8rem;
     position: fixed;
     top: 0;
     width: 100%;
@@ -38,14 +45,18 @@ li>a {
     font-size: 1rem;
 
     border-bottom: 2px solid transparent;
-
+    opacity: 0.6;
     transition: 0.3s;
 }
 li>a:hover {
+    opacity: 1;
+}
+.clickedNavItem{
     border-bottom: 2px solid #59B6E7;
+    opacity: 1;
 }
 main {
-    margin-top: 10rem;
+    
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -98,22 +109,36 @@ h1 {
 .buttons {
     margin-top: 2.5rem;
 }
-.buttons>button {
+.buttons>a>button {
     background-image: linear-gradient(to right, #106997 0%, #106692 10%, #0D4765 100%);
     font-size: 20px;
     padding: 1rem 2rem;
     border-radius: 16px;
-
+    cursor: pointer;
 }
 #arrow{
     position: absolute;
     margin: auto;
     bottom: 2rem;
     animation-name: pulseArrow;
-    animation-duration: s;
+    animation-duration: .8s;
     animation-iteration-count: infinite;
     animation-direction: alternate;
 }
+
+#home, #tools, #projects, #contact{
+    width: 100%;
+    padding-top: 10rem;
+    height: 100vh;
+}
+#tools, #projects, #contact{
+    width: 100%;
+    padding-top: 10rem;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+}
+
 @keyframes imgMove{
     0%{
         transform : translateX(128px)
@@ -137,7 +162,7 @@ h1 {
 }
 @keyframes pulseArrow{
     from{
-        opacity: 0.3;
+        opacity: 0.1;
     }
     to{
         opacity: 1;
