--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,7 @@ main {
     align-items: center;
 }
 .Profile {
+    margin-top: 15rem;
     display: flex;
     gap: 1rem;
     margin-bottom: 4.5rem;
@@ -117,26 +118,66 @@ h1 {
     cursor: pointer;
 }
 #arrow{
-    position: absolute;
-    margin: auto;
-    bottom: 2rem;
     animation-name: pulseArrow;
     animation-duration: .8s;
     animation-iteration-count: infinite;
     animation-direction: alternate;
 }
-
+section>a{
+    height: 2.5rem;
+    width: 2.5rem;
+    text-align: center;
+    position: absolute;
+    margin-top: calc(100vh - 5rem);
+}
+#tools>a, #projects>a{
+    height: 2.5rem;
+    width: 2.5rem;
+    text-align: center;
+    position: absolute;
+    margin-top: calc(100vh - 5rem - 30px);
+}
 #home, #tools, #projects, #contact{
     width: 100%;
-    padding-top: 10rem;
     height: 100vh;
 }
 #tools, #projects, #contact{
     width: 100%;
-    padding-top: 10rem;
     height: 100vh;
     display: flex;
     justify-content: center;
+}
+
+/* section tools */
+#toolsList img {
+    padding: 1.5rem;
+}
+#toolsList div>img:hover{
+    transform : translatey(-1rem)
+}
+#toolsList {
+    display: flex;
+}
+#toolsList div>img{
+    transition: 0.3s;
+}
+#toolsList div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: 0.3s;
+}
+#toolsList div>h3{
+    position: relative;
+    font-size: 1rem;
+}
+#toolsList div>h3{
+    opacity: 0;
+    transition: 0.3s;
+    transform : translatey(-1rem)
+}
+#toolsList div:hover>h3{
+    opacity: 1;
 }
 
 @keyframes imgMove{
