--- a/styles.css
+++ b/styles.css
@@ -8,32 +8,54 @@
 }
 body {
     background-color: #101010;
-    overflow: hidden;
 }
+/* scrollBar */
+
+::-webkit-scrollbar {
+    width: 0.5rem;
+}
+::-webkit-scrollbar-thumb {
+    background: #0e4664; 
+    border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover {
+    background: #0a344b; 
+}
+
 section{
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 10rem;
+    width: 100%;
+    height: 100vh;
 }
 nav {
-    background-color: transparent;
+    z-index:1;
+    background-color: #101010;
     display: flex;
-    gap: 35px;
     align-items: center;
     justify-content: space-between;
-    padding-inline: 90px;
+    padding-inline: 5%;
     height: 8rem;
     position: fixed;
+    overflow: hidden;
     top: 0;
     width: 100%;
 }
 nav > a > img {
-    width: 70px;
-    height: 70px;
+    width: 4.5rem;
+    height: 4.5rem;
 }
 ul {
     display: flex;
-    gap: 35px;
+    gap: 1px;
+
+    padding-inline: 5%;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    flex-wrap: wrap;
 }
 li {
     list-style-type: none;
@@ -86,9 +108,8 @@ main {
     position: relative;
     animation-name: imgMove;
     animation-duration: 1s;
-    animation-delay: 1s;
+    animation-delay: 0.3s;
     animation-fill-mode: both;
-    
 }
 .ProfileInfo>h2 {
     font-size: 24px;
@@ -109,6 +130,11 @@ h1 {
 }
 .buttons {
     margin-top: 2.5rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1rem;
+    margin-inline: 1rem;
 }
 .buttons>a>button {
     background-image: linear-gradient(to right, #106997 0%, #106692 10%, #0D4765 100%);
@@ -123,31 +149,6 @@ h1 {
     animation-iteration-count: infinite;
     animation-direction: alternate;
 }
-section>a{
-    height: 2.5rem;
-    width: 2.5rem;
-    text-align: center;
-    position: absolute;
-    margin-top: calc(100vh - 5rem);
-}
-#tools>a, #projects>a{
-    height: 2.5rem;
-    width: 2.5rem;
-    text-align: center;
-    position: absolute;
-    margin-top: calc(100vh - 5rem - 30px);
-}
-#home, #tools, #projects, #contact{
-    width: 100%;
-    height: 100vh;
-}
-#tools, #projects, #contact{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-}
-
 /* section tools */
 #toolsList img {
     padding: 1.5rem;
@@ -182,22 +183,24 @@ section>a{
 
 @keyframes imgMove{
     0%{
-        transform : translateX(128px)
+        transform : translateX(0);
+        opacity: 0;
     }
     100%{
-        transform : translateX(-5px)
+        transform : translateX(-0);
+        opacity: 1;
     }
 }
 @keyframes textMove{
     0%{
-        transform : translateX(0px);
+        transform : translateX(-8px);
         opacity: 0;
     }
     18%{
         opacity: 0;
     }
     100%{
-        transform : translateX(+10px);
+        transform : translateX(+5px);
         opacity: 1;
     }
 }
@@ -207,5 +210,35 @@ section>a{
     }
     to{
         opacity: 1;
+    }
+}
+
+/* Mobile View */
+@media screen and (max-width: 576px) {
+    body {
+        
+    }
+    #toolsList {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .Profile>img {
+        height: 9rem;
+        width: 9rem;
+    }
+    nav>a>img {
+        display: none;
+    }
+    nav {
+        background-color: #101010;
+        height: 10%;
+    }
+    ul{
+        padding-inline: 5%;
+        align-items: center;
+        justify-content: center;
+        gap: 1rem;
+        flex-wrap: wrap;
     }
 }
