--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ section{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 10rem;
+    padding-top: 8rem;
     width: 100%;
     height: 100vh;
 }
@@ -78,16 +78,26 @@ li>a:hover {
     opacity: 1;
 }
 main {
-    
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.Profile {
-    margin-top: 15rem;
+.content {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    flex: 1;
+}
+.content>h1 {
+    margin-top: 10%;
+}
+.Profile {
+    display: flex;
+    align-items: center;
     gap: 1rem;
-    margin-bottom: 4.5rem;
+
 }
 .Profile>.ProfileInfo{
     opacity: 1;
@@ -143,7 +153,16 @@ h1 {
     border-radius: 16px;
     cursor: pointer;
 }
+.arrowDiv{
+    max-height: 10vh;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
 #arrow{
+    height: 3rem;
     animation-name: pulseArrow;
     animation-duration: .8s;
     animation-iteration-count: infinite;
@@ -223,9 +242,14 @@ h1 {
         flex-wrap: wrap;
         justify-content: center;
     }
+    .content>h1 {
+    }
     .Profile>img {
         height: 9rem;
         width: 9rem;
+    }
+    .Profile {
+        margin-block: 5rem;
     }
     nav>a>img {
         display: none;
@@ -240,5 +264,18 @@ h1 {
         justify-content: center;
         gap: 1rem;
         flex-wrap: wrap;
+    }
+    .buttons{
+        margin-inline: 15%;
+    }
+    .buttons>a{
+        width: 100%;
+    }
+    .buttons>a>button {
+        padding-inline: 1rem;
+        font-size: 20px;
+        width: 100%;
+        border-radius: 16px;
+        cursor: pointer;
     }
 }
