add margin top -10% for mobile view

--- a/styles.css
+++ b/styles.css
@@ -293,6 +293,9 @@ h1 {
     body {
         
     }
+    main {
+        margin-top: -10%;
+    }
     #toolsList {
         display: flex;
         flex-wrap: wrap;
