--- a/styles.css
+++ b/styles.css
@@ -212,8 +212,10 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-
     flex-wrap: wrap;
+}
+.projectsList a {
+    text-decoration: none;
 }
 .projectCard {
     background-color: #2F2F2F;
@@ -222,11 +224,13 @@ h1 {
     width: 450px;
     height: 450px;
     max-height: 450px;
+    outline: 5px solid #0a344b;
 }
 .projectCard>img {
-    width: 450px;
+    width: 100%;
     height: 255px;
     border-radius: 25px 25px 0 0;
+    object-fit: cover;
 }
 .projectContent{
     padding: 1rem;
@@ -239,10 +243,10 @@ h1 {
     margin-bottom: 1rem;
     font-size: 1.250rem;
 }
-.projectContent>span{
-    color: transparent;
-    flex: 1;
-    height: 100%;
+.projectContent span{
+    font-weight: 300;
+    font-size: 1rem;
+    opacity: 0.7;
 }
 .progaminlanguage{
     display: flex;
