--- a/styles.css
+++ b/styles.css
@@ -6,24 +6,28 @@
     color: white;
     scroll-behavior: smooth;
 }
+
 body {
     background-color: #101010;
     user-select: none;
 }
+
 /* scrollBar */
 
 ::-webkit-scrollbar {
     width: 0.5rem;
 }
+
 ::-webkit-scrollbar-thumb {
-    background: #0e4664; 
+    background: #0e4664;
     border-radius: 10px;
 }
+
 ::-webkit-scrollbar-thumb:hover {
-    background: #0a344b; 
+    background: #0a344b;
 }
 
-section{
+section {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -31,8 +35,9 @@ section{
     width: 100%;
     height: 100vh;
 }
+
 nav {
-    z-index:1;
+    z-index: 1;
     background-color: #101010;
     display: flex;
     align-items: center;
@@ -44,10 +49,12 @@ nav {
     top: 0;
     width: 100%;
 }
-nav > a > img {
+
+nav>a>img {
     width: 4.5rem;
     height: 4.5rem;
 }
+
 ul {
     display: flex;
     gap: 1px;
@@ -58,9 +65,11 @@ ul {
     gap: 1rem;
     flex-wrap: wrap;
 }
+
 li {
     list-style-type: none;
 }
+
 li>a {
     text-decoration: none;
     font-weight: bold;
@@ -71,18 +80,22 @@ li>a {
     opacity: 0.6;
     transition: 0.3s;
 }
+
 li>a:hover {
     opacity: 1;
 }
-.clickedNavItem{
+
+.clickedNavItem {
     border-bottom: 2px solid #59B6E7;
     opacity: 1;
 }
+
 main {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
 .content {
     display: flex;
     flex-direction: column;
@@ -91,16 +104,19 @@ main {
 
     flex: 1;
 }
+
 .content>h1 {
     margin-top: 10%;
 }
+
 .Profile {
     display: flex;
     align-items: center;
     gap: 1rem;
 
 }
-.Profile>.ProfileInfo{
+
+.Profile>.ProfileInfo {
     opacity: 1;
     display: flex;
     flex-direction: column;
@@ -112,6 +128,7 @@ main {
     animation-delay: 1s;
     animation-fill-mode: both;
 }
+
 .Profile>img {
     height: 12rem;
     width: 12rem;
@@ -122,23 +139,28 @@ main {
     animation-delay: 0.3s;
     animation-fill-mode: both;
 }
+
 .ProfileInfo>h2 {
     font-size: 24px;
     font-weight: bold;
 }
+
 .ProfileInfo>h3 {
     font-size: 16px;
     margin-top: 0.25rem;
     font-weight: 100;
 }
+
 .ProfileInfo>h4 {
     font-size: 16px;
     font-weight: 100;
     margin-top: 1rem;
 }
+
 h1 {
     font-size: 32px;
 }
+
 .buttons {
     margin-top: 2.5rem;
     display: flex;
@@ -147,6 +169,7 @@ h1 {
     gap: 1rem;
     margin-inline: 1rem;
 }
+
 .buttons>a>button {
     background-image: linear-gradient(to right, #106997 0%, #106692 10%, #0D4765 100%);
     font-size: 20px;
@@ -154,7 +177,8 @@ h1 {
     border-radius: 16px;
     cursor: pointer;
 }
-.arrowDiv{
+
+.arrowDiv {
     max-height: 10vh;
     display: flex;
     width: 100%;
@@ -162,20 +186,24 @@ h1 {
     justify-content: center;
     align-items: center;
 }
-#arrow{
+
+#arrow {
     height: 3rem;
     animation-name: pulseArrow;
     animation-duration: .8s;
     animation-iteration-count: infinite;
     animation-direction: alternate;
 }
+
 /* section tools */
 #toolsList img {
     padding: 1.5rem;
 }
-#toolsList div>img:hover{
-    transform : translatey(-1rem)
+
+#toolsList div>img:hover {
+    transform: translatey(-1rem)
 }
+
 #toolsList {
     display: flex;
     justify-content: center;
@@ -183,40 +211,49 @@ h1 {
     width: 100%;
     height: 100%;
 }
-#toolsList div>img{
+
+#toolsList div>img {
     transition: 0.3s;
 }
-#toolsList div{
+
+#toolsList div {
     display: flex;
     flex-direction: column;
     align-items: center;
     transition: 0.3s;
 }
-#toolsList div>h3{
+
+#toolsList div>h3 {
     position: relative;
     font-size: 1rem;
 }
-#toolsList div>h3{
+
+#toolsList div>h3 {
     opacity: 0;
     transition: 0.3s;
-    transform : translatey(-1rem)
+    transform: translatey(-1rem)
 }
-#toolsList div:hover>h3{
+
+#toolsList div:hover>h3 {
     opacity: 1;
 }
+
 /* section projects */
 #projects {
     height: fit-content;
 }
+
 .projectsList {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
 }
+
 .projectsList a {
     text-decoration: none;
 }
+
 .projectCard {
     background-color: #2F2F2F;
     border-radius: 25px;
@@ -226,29 +263,34 @@ h1 {
     max-height: 450px;
     outline: 5px solid #0a344b;
 }
+
 .projectCard>img {
     width: 100%;
     height: 255px;
     border-radius: 25px 25px 0 0;
     object-fit: cover;
 }
-.projectContent{
+
+.projectContent {
     padding: 1rem;
     display: flex;
     flex-direction: column;
     border-radius: 0 0 25px 25px;
     font-size: 1rem;
 }
-.projectContent>h2{
+
+.projectContent>h2 {
     margin-bottom: 1rem;
     font-size: 1.250rem;
 }
-.projectContent span{
+
+.projectContent span {
     font-weight: 300;
     font-size: 1rem;
     opacity: 0.7;
 }
-.progaminlanguage{
+
+.progaminlanguage {
     display: flex;
     padding: 0;
     font-size: 0.875rem;
@@ -256,10 +298,12 @@ h1 {
     justify-content: space-between;
     align-items: center;
 }
-.progaminlanguage>div>img{
+
+.progaminlanguage>div>img {
     width: 33px;
     margin-inline: 0.375rem;
 }
+
 /* section Contact */
 .contactLinks {
     display: flex;
@@ -268,6 +312,7 @@ h1 {
     gap: 1rem;
     padding-top: 2rem;
 }
+
 .Link {
     width: fit-content;
     height: fit-content;
@@ -278,70 +323,87 @@ h1 {
     justify-content: center;
     align-items: center;
 }
-.listLink h4, .listLink span{
+
+.listLink h4,
+.listLink span {
     color: #ffffff;
 }
+
 .listLink img {
     width: 2rem;
     height: 2rem;
 }
-.listLink:hover h4, .listLink:hover span, .listLink:hover .Link{
+
+.listLink:hover h4,
+.listLink:hover span,
+.listLink:hover .Link {
     color: #59B6E7;
     border-color: #59B6E7;
+    /* color fill for svg files */
     filter: brightness(0) saturate(100%) invert(65%) sepia(78%) saturate(780%) hue-rotate(171deg) brightness(97%) contrast(87%);
 }
 
 .contactLinks a {
     text-decoration: none;
 }
+
 .listLink {
     display: flex;
     align-items: center;
     gap: 1rem;
     transition: 0.3s;
 }
+
 .listLink span {
     font-weight: 400;
     font-size: 0.875rem;
 }
+
 .listLink:hover {
     cursor: pointer;
     fill: #0D4765;
     color: #59B6E7;
 }
+
 footer {
     display: flex;
     justify-content: center;
 }
 
-@keyframes imgMove{
-    0%{
-        transform : translateX(0);
+@keyframes imgMove {
+    0% {
+        transform: translateX(0);
         opacity: 0;
     }
-    100%{
-        transform : translateX(-0);
+
+    100% {
+        transform: translateX(-0);
         opacity: 1;
     }
 }
-@keyframes textMove{
-    0%{
-        transform : translateX(-8px);
+
+@keyframes textMove {
+    0% {
+        transform: translateX(-8px);
         opacity: 0;
     }
-    18%{
+
+    18% {
         opacity: 0;
     }
-    100%{
-        transform : translateX(+5px);
+
+    100% {
+        transform: translateX(+5px);
         opacity: 1;
     }
 }
-@keyframes pulseArrow{
-    from{
+
+@keyframes pulseArrow {
+    from {
         opacity: 0.1;
     }
-    to{
+
+    to {
         opacity: 1;
     }
 }
@@ -351,42 +413,52 @@ footer {
     main {
         margin-top: -10%;
     }
+
     #toolsList {
         display: flex;
         width: 80vw;
         overflow-x: scroll;
         justify-content: center;
     }
+
     #toolsList::-webkit-scrollbar {
         display: none;
-      }
+    }
+
     .Profile>img {
         height: 9rem;
         width: 9rem;
     }
+
     .Profile {
         margin-block: 5rem;
     }
+
     nav>a>img {
         display: none;
     }
+
     nav {
         background-color: #101010;
         height: 10%;
         align-items: center;
         justify-content: center;
     }
-    ul{
+
+    ul {
         padding-inline: 5%;
         gap: 1rem;
         flex-wrap: wrap;
     }
-    .buttons{
+
+    .buttons {
         margin-inline: 15%;
     }
-    .buttons>a{
+
+    .buttons>a {
         width: 100%;
     }
+
     .buttons>a>button {
         padding-inline: 1rem;
         font-size: 20px;
@@ -394,20 +466,24 @@ footer {
         border-radius: 16px;
         cursor: pointer;
     }
+
     .projectCard {
         margin: 2rem;
         width: 80%;
         height: fit-content;
     }
+
     .projectCard>img {
         height: 10rem;
         width: 100%;
     }
-    .progaminlanguage{
+
+    .progaminlanguage {
         display: flex;
         flex-direction: column;
         gap: 0.8rem;
     }
+
     .listLink {
         opacity: 1;
     }
